# cs2-bot-assistant-community

./: .env.example  .env.projects.cs2-bot-improver  .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  env.d.ts  eslint.config.ts  gen-icon.ps1  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
config/workspace/: projects.json
docs/: ai-workflow.md  architecture.md  product.md
plugins/RoundDamageRecap/: RoundDamageRecap.cs  RoundDamageRecap.csproj  config.json.example
scripts/: build-cs2-command-library.mjs  build-resource-zip.ps1  fetch-cs2-cvars.mjs  full-build.ps1  release-manifest.mjs  workspace-check.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.prod.json  tauri.webview2-fixed.json  tauri.webview2-offline.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default-bot-taunts.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  cs2.rs  custom_commands.rs  mod.rs  official_site.rs  resource.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: cs2.rs  custom_commands.rs  mod.rs  runtime_context.rs
src-tauri/src/services/: app_runtime.rs  cs2.rs  custom_commands.rs  mod.rs  monitor.rs  official_site.rs  resource.rs
src/app/: create-app.ts  i18n.ts
src/components/: ActionModal.vue  CollapsiblePanel.vue  CopyButton.vue  DiagnosticsPanel.vue  GlobalToast.vue  (+10 more)
tests/: frontend-context.spec.ts  release-notes-view.spec.ts  software-update-modal.spec.ts  software-updates-history.spec.ts
(+87 files in other folders)
